--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,8 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "lib": ["ESNext", "DOM"],
+    "target": "ESNext",
     "paths": {
       "@/*": ["./src/*"]
     }
