--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
-    "vue-tsc": "^1.0.12"
+    "vue-tsc": "^1.0.12",
+    "vue3-calendar-heatmap": "^2.0.0"
   }
 }
